--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -5631,7 +5631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "113f1d03",
    "metadata": {},
    "outputs": [],
@@ -5642,7 +5642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "1d2c2fc0",
    "metadata": {},
    "outputs": [],
@@ -5658,14 +5658,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "ed34f4cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crear el motor de datos, el tipo sqlite y se ejecuta en memoria, se referencia en la variable engine\n",
-    "engine = create_engine('sqlite: ///:memory')"
+    "engine = create_engine('sqlite:///:memory:')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68cb8a88",
+   "metadata": {},
+   "source": [
+    "## **Escribiendo en un baco de datos**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "b0bf672e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "cf76b96f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo = 'Data/clientes_banco.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "6e1009d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = pd.read_csv(archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "203baa68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_Cliente</th>\n",
+       "      <th>Edad</th>\n",
+       "      <th>Grado_estudio</th>\n",
+       "      <th>Estado_civil</th>\n",
+       "      <th>Tamaño_familia</th>\n",
+       "      <th>Categoria_de_renta</th>\n",
+       "      <th>Ocupacion</th>\n",
+       "      <th>Años_empleado</th>\n",
+       "      <th>Rendimiento_anual</th>\n",
+       "      <th>Tiene_carro</th>\n",
+       "      <th>Vivienda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5008804</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Nivel superior</td>\n",
+       "      <td>Relación-estable</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Empleado</td>\n",
+       "      <td>Otro</td>\n",
+       "      <td>12</td>\n",
+       "      <td>427500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Departamento alquilado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5008805</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Nivel superior</td>\n",
+       "      <td>Relación-estable</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Empleado</td>\n",
+       "      <td>Otro</td>\n",
+       "      <td>12</td>\n",
+       "      <td>427500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Departamento alquilado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5008806</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Nivel intermedio</td>\n",
+       "      <td>Casado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Empleado</td>\n",
+       "      <td>Seguridad</td>\n",
+       "      <td>3</td>\n",
+       "      <td>112500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Casa/Departamento propio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5008808</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Nivel intermedio</td>\n",
+       "      <td>Soltero</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Business Partner</td>\n",
+       "      <td>Ventas</td>\n",
+       "      <td>8</td>\n",
+       "      <td>270000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/Departamento propio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5008809</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Nivel intermedio</td>\n",
+       "      <td>Soltero</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Business Partner</td>\n",
+       "      <td>Ventas</td>\n",
+       "      <td>8</td>\n",
+       "      <td>270000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/Departamento propio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID_Cliente  Edad     Grado_estudio      Estado_civil  Tamaño_familia  \\\n",
+       "0     5008804    32    Nivel superior  Relación-estable               2   \n",
+       "1     5008805    32    Nivel superior  Relación-estable               2   \n",
+       "2     5008806    58  Nivel intermedio            Casado               2   \n",
+       "3     5008808    52  Nivel intermedio           Soltero               1   \n",
+       "4     5008809    52  Nivel intermedio           Soltero               1   \n",
+       "\n",
+       "  Categoria_de_renta  Ocupacion  Años_empleado  Rendimiento_anual  \\\n",
+       "0           Empleado       Otro             12           427500.0   \n",
+       "1           Empleado       Otro             12           427500.0   \n",
+       "2           Empleado  Seguridad              3           112500.0   \n",
+       "3   Business Partner     Ventas              8           270000.0   \n",
+       "4   Business Partner     Ventas              8           270000.0   \n",
+       "\n",
+       "   Tiene_carro                  Vivienda  \n",
+       "0            1    Departamento alquilado  \n",
+       "1            1    Departamento alquilado  \n",
+       "2            1  Casa/Departamento propio  \n",
+       "3            0  Casa/Departamento propio  \n",
+       "4            0  Casa/Departamento propio  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d32d2cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "438463"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pasar el archivo csv como la tabla 'clientes' en el motor 'engine' y sin indices\n",
+    "datos.to_sql('clientes', engine, index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "8a54f64c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inspeccionar el motor en busca de los datos cargados\n",
+    "inspector = inspect(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "0d8f7d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['clientes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obtener el nombre de las tablas dentro del motor 'engine'\n",
+    "print(inspector.get_table_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e32c179",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
