--- a/Pandas_Transformacion_Manipulacion_Datos/Pandas_Tratamiento_Manipulacion_datos.ipynb
+++ b/Pandas_Transformacion_Manipulacion_Datos/Pandas_Tratamiento_Manipulacion_datos.ipynb
@@ -2235,12 +2235,332 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72263283",
+   "metadata": {},
+   "source": [
+    "# **4. Datos de tiempo**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "3cd3bfea",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>fecha</th>\n",
+       "      <th>lugar_disponible</th>\n",
+       "      <th>precio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-05</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-06</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-07</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-08</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id       fecha  lugar_disponible precio\n",
+       "0  857  2016-01-04             False   None\n",
+       "1  857  2016-01-05             False   None\n",
+       "2  857  2016-01-06             False   None\n",
+       "3  857  2016-01-07             False   None\n",
+       "4  857  2016-01-08             False   None"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_data = pd.read_json('content/inmuebles_disponibles.json')\n",
+    "dt_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7f45c260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 365000 entries, 0 to 364999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column            Non-Null Count   Dtype \n",
+      "---  ------            --------------   ----- \n",
+      " 0   id                365000 non-null  int64 \n",
+      " 1   fecha             365000 non-null  object\n",
+      " 2   lugar_disponible  365000 non-null  bool  \n",
+      " 3   precio            270547 non-null  object\n",
+      "dtypes: bool(1), int64(1), object(2)\n",
+      "memory usage: 11.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf80f869",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Cambiando el tipo de valor a fecha\n",
+    "dt_data['fecha'] = pd.to_datetime(dt_data['fecha'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b4bffee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 365000 entries, 0 to 364999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column            Non-Null Count   Dtype         \n",
+      "---  ------            --------------   -----         \n",
+      " 0   id                365000 non-null  int64         \n",
+      " 1   fecha             365000 non-null  datetime64[ns]\n",
+      " 2   lugar_disponible  365000 non-null  bool          \n",
+      " 3   precio            270547 non-null  object        \n",
+      "dtypes: bool(1), datetime64[ns](1), int64(1), object(1)\n",
+      "memory usage: 11.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "50dffdbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>fecha</th>\n",
+       "      <th>lugar_disponible</th>\n",
+       "      <th>precio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-05</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-06</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-07</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2016-01-08</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id      fecha  lugar_disponible precio\n",
+       "0  857 2016-01-04             False   None\n",
+       "1  857 2016-01-05             False   None\n",
+       "2  857 2016-01-06             False   None\n",
+       "3  857 2016-01-07             False   None\n",
+       "4  857 2016-01-08             False   None"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cac30680",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2016-01\n",
+       "1         2016-01\n",
+       "2         2016-01\n",
+       "3         2016-01\n",
+       "4         2016-01\n",
+       "           ...   \n",
+       "364995    2016-12\n",
+       "364996    2016-12\n",
+       "364997    2016-12\n",
+       "364998    2017-01\n",
+       "364999    2017-01\n",
+       "Name: fecha, Length: 365000, dtype: object"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mostrar solo el mes y año\n",
+    "dt_data['fecha'].dt.strftime('%Y-%m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec592050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fecha\n",
+       "2016-01    16543\n",
+       "2016-02    20128\n",
+       "2016-03    23357\n",
+       "2016-04    22597\n",
+       "2016-05    23842\n",
+       "2016-06    23651\n",
+       "2016-07    22329\n",
+       "2016-08    22529\n",
+       "2016-09    22471\n",
+       "2016-10    23765\n",
+       "2016-11    23352\n",
+       "2016-12    24409\n",
+       "2017-01     1574\n",
+       "Name: lugar_disponible, dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Agrupar y conatar inmuebles que estubieron vacios por mes\n",
+    "subset = dt_data.groupby(dt_data['fecha'].dt.strftime('%Y-%m'))['lugar_disponible'].sum()\n",
+    "subset"
+   ]
   }
  ],
  "metadata": {
